# api-transactions-test-task

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 2024_06_05_1846-dc11a9a32423_create_model_tables.py  2024_06_05_1905-febe10116ef7_added_datetime_fields_to_transactions_.py
src/core/conf/: config.py  logging_config.py
src/core/database/models/: __init__.py  admin_tokens.py  enums.py  mixins.py  transactions.py  users.py
src/repositories/: admin.py  transactions.py  users.py
src/routes/: __init__.py  admin.py  users.py
src/schemas/: admin.py  transactions.py  users.py
src/services/: auth_dependencies.py  security.py  validation.py
static/css/: style.css
templates/: admin_panel.html  base.html  login.html  register.html
templates/includes/: navigation.html
