[tool.poetry]
name = "api-transactions-test-task"
version = "0.1.0"
description = "API service for transaction management"
authors = ["Viktor Beniukh <superbigbenjamin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
pydantic = {extras = ["email"], version = "^2.7.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.3.0"
fastapi-pagination = "^0.12.24"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
jinja2 = "^3.1.4"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
